# TP4-Mandelbrot

./: .gitignore  README.md  make.bat  setup.cfg  test.ipynb  test_tim.ipynb
doc/: conf.py
docs/: conf.py  index.rst  src.mandelbrot.rst  src.rst
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  src.doctree  src.mandelbrot.doctree
docs/_build/html/: .buildinfo  README.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  src.mandelbrot.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/mandelbrot/: mandelbrot.html  plot.html
docs/_build/html/_sources/: README.md.txt  index.rst.txt
src/: __main__.py
src/mandelbrot/: mandelbrot.py  plot.py
tests/: test_main.py
