[metadata]
name = TP4-Mandelbrot
author = Timothée Mesnard et Vincent Sevestre
author_email = tm_vs.contact@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = Compte rendu du TP4 de PAPY
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    # Liste des dépendances externes
    pytest
    tqdm
    Pillow
    numpy

[options.entry_points]
console_scripts =
    main=src.__main__:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS